@@ -1,5 +1,6 @@
-$NetBSD: distinfo,v 1.8 2021/10/26 11:06:03 nia Exp $
+$NetBSD: distinfo,v 1.9 2021/11/09 01:40:14 manu Exp $
 
-BLAKE2s (check_dotpid-0.5.tgz) = f96d298c0c83342aac4b397ead4a1215e31f354b9021c162cbcd971729a2db56
-SHA512 (check_dotpid-0.5.tgz) = ec6a07f6fb73e416a6483405c1919e697a4b1ff84a5a4ef0a8ca064a5c03c4e401d3c6dc78aee0a3c9c56a465a4a34011f882220499a0a3a8aba963682a21a52
-Size (check_dotpid-0.5.tgz) = 2272 bytes
+SHA1 (check_dotpid-0.6.tgz) = d98c6b8ef16632cfa31a737a6bead3d19373a25d
+RMD160 (check_dotpid-0.6.tgz) = 5f24c5e978f2923e929b0148773a43a7c50f947b
+SHA512 (check_dotpid-0.6.tgz) = 9e4990399c5cb9885e6671589671710fdd45e369ee876dbd4d9a401a60cc1ff4cfeab79e9020aeae3fcc73d116ada50057ab62f7d530469328c13a3d19d18e4c
+Size (check_dotpid-0.6.tgz) = 2394 bytes
