@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2021,v 1.5495 2021/11/08 16:47:47 adam Exp $
+$NetBSD: CHANGES-2021,v 1.5496 2021/11/09 01:40:14 manu Exp $
 
 Changes to the packages collection and infrastructure in 2021:
 
@@ -8306,3 +8306,4 @@ Changes to the packages collection and infrastructure in 2021:
 	Updated finance/electrum to 4.1.5nb1 [dan 2021-11-08]
 	Updated devel/py-curtsies to 0.3.10 [adam 2021-11-08]
 	Updated devel/bpython to 0.22 [adam 2021-11-08]
+	Updated net/nagios-plugin-dotpid to 0.6 [manu 2021-11-09]
